--- a/src/app/components/image_slider/styles/image_slider.module.scss
+++ b/src/app/components/image_slider/styles/image_slider.module.scss
@@ -1,6 +1,7 @@
 .slider {
   position: relative;
   overflow: hidden;
+  min-height: min-content;
 
   .slider__viewport {
     overflow: hidden;
